[project]
name = "document-ingestion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "nltk>=3.9.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
